# doc-sorter

./: .gitignore  AGENTS.md  README.md  SPEC.md  embed_ocr.py  pyproject.toml  taxonomy.yaml  try_review.py
DocSorter/: project.yml
DocSorter/DocSorter/: ContentView.swift  DocSorterApp.swift  Info.plist
DocSorter/DocSorter/Bridge/: PythonBridge.swift  ScanEvent.swift
DocSorter/DocSorter/MainPane/: DetailPanelView.swift  DoneView.swift  ErrorView.swift  IdleView.swift  MainPaneView.swift  PreparingView.swift  (+3 more)
doc_cleaner/: __main__.py  applier.py  cache.py  cli.py  config.py  interactive.py  logging.py  planner.py  review_table.py  scanner.py  taxonomy.py  tui.py  undo.py  utils.py
doc_cleaner/classifier/: __init__.py  ollama.py  prompts.py  schema.py
doc_cleaner/extractors/: __init__.py  _rotation.py  docx.py  image_ocr.py  pdf.py  pdf_ocr.py  text.py
sample_docs/: allianz_rechnung.txt  arbeitsvertrag.txt  mietvertrag.txt  sparkasse_kontoauszug.txt  steuerbescheid.txt  vodafone_rechnung.txt
test_docs/: generate_test_docs.py
test_input/Finance/: amazon_quittung.txt
test_input/Legal/: mietvertrag.docx
test_input/Work/: arbeitsvertrag.docx
test_input/edge_cases/: ambiguous_letter.txt
tests/: test_apply_no_overwrite.py  test_cli_jsonl_output.py  test_cli_run_pipeline.py  test_cli_suggest_taxonomy.py  test_extractors.py  test_filename_sanitize.py  test_interactive_review.py  test_interactive_smoke.py  test_ollama.py  test_planner.py  test_prompts.py  test_review_table.py  test_scanner.py  test_schema.py  test_taxonomy.py  test_tui_smoke.py
(+20 files in other folders)
