[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doc-cleaner"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.9",
    "pydantic>=2",
    "rich>=13",
    "httpx>=0.27",
    "pypdf>=4",
    "python-docx>=1",
    "pillow>=10",
    "python-magic>=0.4",
    "pyyaml>=6",
    "textual>=0.50",
]

[project.optional-dependencies]
ocr = ["pytesseract"]
dev = ["pytest>=8", "fpdf2>=2.7", "pytest-mock>=3"]

[project.scripts]
doc-cleaner = "doc_cleaner.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
