[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doc-sorter"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.9",
    "pydantic>=2",
    "rich>=13",
    "httpx>=0.27",
    "pypdf>=4",
    "python-docx>=1",
    "pillow>=10",
    "python-magic>=0.4",
    "pyyaml>=6",
    "prompt_toolkit>=3.0",
]

[project.optional-dependencies]
ocr = ["pytesseract"]
dev = ["pytest>=8", "fpdf2>=2.7", "pytest-mock>=3"]

[project.scripts]
doc-sorter = "doc_cleaner.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
